# django-tinywiki

./: .gitignore  LICENSE  README.md  manage  manage.py  pyproject.toml  requirements.txt  setup.py  update-messages
django_tinywiki/: decorators.py  functions.py  settings.py  urls.py  version.py
django_tinywiki.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_tinywiki/builtin_wiki_pages/: __init__.py  de.index.md  de.markdown.md  de.settings.md  en.index.md  en.license.md  en.markdown.md  en.settings.md
django_tinywiki/forms/: __init__.py  auth.py  wiki.py
django_tinywiki/functions/: __init__.py  auth.py  functions.py  init.py  sidebar.py  utils.py  wiki.py
django_tinywiki/markdown_extensions/: __init__.py  delpattern.py  djangourl.py  tinywikiimage.py  tinywikilink.py  video.py
django_tinywiki/migrations/: 0001_initial.py  0002_alter_wikiimage_image_alter_wikiimage_image_preview_and_more.py  0003_wikiimage_image_sidebar.py  0008_alter_wikiimage_image_alter_wikiimage_image_preview_and_more.py  0009_alter_wikiimage_alt_alter_wikiimage_image_and_more.py  0010_wikipage_contentfile_md5.py  0011_alter_wikipage_options.py
django_tinywiki/models/: __init__.py  language.py  wiki.py
django_tinywiki/scripts/: initapp.py  tinywiki_codehilite_styles.py  tinywiki_languages.py  tinywiki_styles.py
django_tinywiki/templates/django_tinywiki/: base.html
django_tinywiki/views/: __init__.py  auth.py  de.404.md  en.404.md  manage.py  view.py  wiki.py
locale/de/LC_MESSAGES/: django.po
tinywiki/: asgi.py  settings.py  urls.py  wsgi.py
(+16 files in other folders)
