[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-tinywiki"
version = "0.0.1"
license = {text = "BSD-3-Clause"}
authors = [
	{ name="Christian Moser", email="christian@cmoser.eu" },
]
description = "A small wiki app for django"
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
dependencies = [
	"django >= 4.2",
	"django-extras",
	"pillow >=10.2",
	"markdown",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [ "django_tinywiki", "django_tinywiki.*" ]

[tool.setuptools.package-data]
"django_tinywiki.builtin_wiki_pages" = ["*.md","*.png","*.jpg",]
"django_tinywiki.locale.de.LC_MESSAGES" = ["*.mo",]

[project.urls]
Homepage = "https://github.com/c9moser/django-tinywiki.git"
Issues = "https://github.com/c9moser/django-tinywiki/issues"

